[project]
name = "hermes-memory"
version = "0.1.0"
description = "Hermes Agent memory system — data layer"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "ruff>=0.3", "black>=24.0", "isort>=5.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
